--- a/page.html
+++ b/page.html
@@ -196,7 +196,7 @@
           <i
             class="fa fa-caret-right"
             aria-hidden="true"
-            style="color: #663300;"
+            style="color: white;"
           ></i>
         </div>
       </section>
